// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 182,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    130,
    {
      "compressed": true,
      "immutable": true,
      "size": 130,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): errors 1`] = `[]`;

exports[`"threshold" option matches snapshot for \`0\` value ({Number}): warnings 1`] = `[]`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73507,
    {
      "compressed": true,
      "immutable": true,
      "size": 73507,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    182,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "size": 182,
    },
  ],
  [
    "main.46d06887b61d39060e44.js",
    16424,
    {
      "chunkhash": "46d06887b61d39060e44",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.46d06887b61d39060e44.js.gz",
      },
      "size": 16424,
    },
  ],
  [
    "main.46d06887b61d39060e44.js.gz",
    4141,
    {
      "compressed": true,
      "immutable": true,
      "size": 4141,
    },
  ],
]
`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): errors 1`] = `[]`;

exports[`"threshold" option matches snapshot for \`8192\` value ({Number}): warnings 1`] = `[]`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: assets 1`] = `
[
  [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    {
      "immutable": true,
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  [
    "main.c4c14c50288a1707fa43.js",
    5554,
    {
      "chunkhash": "c4c14c50288a1707fa43",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.c4c14c50288a1707fa43.js.gz",
      },
      "size": 5554,
    },
  ],
  [
    "main.c4c14c50288a1707fa43.js.gz",
    1663,
    {
      "compressed": true,
      "immutable": true,
      "size": 1663,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: errors 1`] = `[]`;

exports[`"threshold" option should compress all assets excluding assets with "0" bytes original size: warnings 1`] = `[]`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: assets 1`] = `
[
  [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt",
    0,
    {
      "immutable": true,
      "related": {
        "gzipped": "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
      },
      "size": 0,
      "sourceFilename": "empty.txt",
    },
  ],
  [
    "31d6cfe0d16ae931b73c59d7e0c089c0.txt.gz",
    20,
    {
      "compressed": true,
      "immutable": true,
      "size": 20,
    },
  ],
  [
    "main.c4c14c50288a1707fa43.js",
    5554,
    {
      "chunkhash": "c4c14c50288a1707fa43",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.c4c14c50288a1707fa43.js.gz",
      },
      "size": 5554,
    },
  ],
  [
    "main.c4c14c50288a1707fa43.js.gz",
    1663,
    {
      "compressed": true,
      "immutable": true,
      "size": 1663,
    },
  ],
]
`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: errors 1`] = `[]`;

exports[`"threshold" option should compress all assets including assets with "0" bytes original size: warnings 1`] = `[]`;
